--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "is-url": "^1.2.4",
     "mongodb": "^6.3.0",
     "mongoose": "^8.1.1",
     "randomstring": "^1.3.0"
